--- a/src/modules/index/test/index.html
+++ b/src/modules/index/test/index.html
@@ -1,3 +1,3 @@
 <div>
-   <h1> 我是index/test页面！！！ ,{state.count}<a  onClick={()=> add(event)}>点我</a></h1>
+   <h1 className={css.red}> 我是index/test页面！！！ ,{state.count}<a  onClick={()=> add(event)}>点我</a></h1>
 </div>
